[gd_scene load_steps=3 format=3 uid="uid://bq283ou7kcpm0"]

[ext_resource type="Theme" uid="uid://drr70ylap357l" path="res://ui/theme/custom_theme.tres" id="1_od2n0"]
[ext_resource type="Script" path="res://ui/main_menu/main_menu.gd" id="2_e8xvk"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_od2n0")
script = ExtResource("2_e8xvk")

[node name="LevelSelectText" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 160.0
offset_bottom = 32.0
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="LevelButtons" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 2

[node name="LevelButtonsContainer" type="GridContainer" parent="LevelButtons"]
layout_mode = 2
theme_override_constants/h_separation = 5
theme_override_constants/v_separation = 5
columns = 4

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2
offset_top = 128.0
offset_right = 160.0
offset_bottom = 160.0

[node name="QuitButton" type="Button" parent="CenterContainer"]
layout_mode = 2
text = "Quit Game"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 2
offset_left = 16.0
offset_right = 144.0
offset_bottom = 16.0
text = "Level Select"
